# quemb

./: .clang-format  .gitignore  .ruff.toml  CMakeLists.txt  ISSUES  NOTICE  README.md  TODO  build.py  finite_differences_ccsd.py  finite_differences_fci.py  index.html  mypy.ini  pyproject.toml  requirements.txt  setup.py
.githooks/: pre-commit
.github/workflows/: build_docs.yml  quemb_expensive_unittest.yml  quemb_unittest.yml
docs/: Makefile  index.html  requirements.txt
docs/source/: api_reference.rst  bibliography.rst  conf.py  fragment.rst  index.rst  install.rst  kernel.rst  literature.bib  misc.rst  nitpick-exceptions  optimize.rst  pfrag.rst  references.rst  shared.rst  solvers.rst  usage.rst
example/: fragmentation_general.py  kbe_polyacetylene.py  molbe_dmrg_block2.py  molbe_h8_chemical_potential.py  molbe_h8_density_matching.py  molbe_hexene_iaos.py  molbe_hexene_oneshot_uccsd.py  molbe_io_fcidump.py  molbe_octane.py  molbe_octane_cno.py  molbe_octane_get_rdms.py  molbe_octane_qmmm.py  molbe_oneshot_rbe_hcore.py  molbe_oneshot_rbe_qmmm-fromchk.py  molbe_oneshot_ube_qmmm.py  molbe_ppp.py  molbe_sci_h20.py  orca_interface.py
example/data/: e_poly_80.xyz  graphene_9by6.xyz  h2o_cluster.xyz  oneshot_rbe_qmmm.chk
main/: .buildinfo  api_reference.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js
main/.doctrees/: api_reference.doctree  index.doctree  install.doctree
main/_autosummary/: quemb.kbe.autofrag.AutogenArgs.__init__.html  quemb.kbe.autofrag.AutogenArgs.html  quemb.kbe.autofrag.add_check_k.html  quemb.kbe.autofrag.autogen.html  quemb.kbe.autofrag.be_reduce.html  quemb.kbe.autofrag.html  quemb.kbe.autofrag.kfrag_func.html  quemb.kbe.autofrag.nearestof2coord.html  quemb.kbe.autofrag.sidefunc.html  quemb.kbe.autofrag.surround.html  quemb.kbe.autofrag.warn_large_fragment.html  quemb.kbe.chain.findH.html  quemb.kbe.chain.html  quemb.kbe.chain.polychain.html  quemb.kbe.fragment.FragPart.__init__.html  quemb.kbe.fragment.FragPart.all_centers_are_origins.html  quemb.kbe.fragment.FragPart.html  quemb.kbe.fragment.FragPart.to_Frags.html  quemb.kbe.fragment.fragmentate.html  quemb.kbe.fragment.fragpart.__init__.html  quemb.kbe.fragment.fragpart.html  quemb.kbe.fragment.fragpart.polychain.html  quemb.kbe.fragment.html  quemb.kbe.helper.get_veff.html  quemb.kbe.helper.html  quemb.kbe.html  quemb.kbe.lo.KMF.__init__.html  quemb.kbe.lo.KMF.html  quemb.kbe.lo.Mixin_k_Localize.__init__.html  quemb.kbe.lo.Mixin_k_Localize.html  quemb.kbe.lo.Mixin_k_Localize.localize.html  quemb.kbe.lo.get_iao_k.html  quemb.kbe.lo.get_pao_k.html  quemb.kbe.lo.get_pao_native_k.html  quemb.kbe.lo.get_xovlp_k.html  quemb.kbe.lo.html  quemb.kbe.lo.remove_core_mo_k.html  quemb.kbe.lo_k.cano_orth.html  quemb.kbe.lo_k.dot_gen.html  quemb.kbe.lo_k.get_cano_orth_mat.html  (+546 more)
main/_sources/: install.rst.txt
main/main/: .buildinfo  api_reference.html  index.html
molbe/: __init__.py  chemfrag.py  helper.py  lo.py  mbe.py  pfrag.py  solver.py  ube.py
molbe/_cpp/: eri_sparse_DF.pyi
molbe/mf_interfaces/: __init__.py  _pyscf_orbital_order.py  orca_interface.py
shared/: helper.py  solver.py
src/general/: be_var.py  manage_scratch.py
src/kbe/: _opt.py  autofrag.py  chain.py  fragment.py  helper.py  lo.py  lo_k.py  misc.py  pbe.py  pfrag.py  solver.py
src/molbe/: __init__.py  _opt.py  autofrag.py  be_parallel.py  eri_onthefly.py  fragment.py  helper.py  lo.py  mbe.py  misc.py  pfrag.py  rdm.py  solver.py  ube.py
src/quemb/: .gitignore  LICENSE  __init__.py
tests/: _expected_data_for_chemfrag.py  _expected_data_for_eri_sparse_DF.py  _expected_data_for_fragmentation_test.py  chem_dm_kBE_test.py  chempot_molBE_test.py  dm_molBE_test.py  dmrg_molBE_test.py  eri_onthefly_test.py  finite_differences_ccsd.py  finite_differences_fci.py  fragmentation_test.py  hf-in-hf_BE_test.py  iao_test.py  kbe_polyacetylene_test.py  loc_test.py  local_gradient_test.py  molbe_h8_test.py  molbe_io_fcidump_test.py  molbe_octane_get_rdms_test.py  molbe_octane_test.py  molbe_oneshot_rbe_hcore_test.py  molbe_oneshot_rbe_qmmm-fromchk_test.py  sci_be_test.py  scratch_manager_test.py  static_analysis_requirements.txt  suspected_bug_in_fragmentation.py  test_chemfrag.py  test_eri_sparse_DF.py  test_indexing.py  test_known_bug_autogen.py  test_local_gradient.py  test_mf_interface.py  test_opt_requirements.txt  test_requirements.txt  test_sparse_2el_integrals.py  test_suspected_bug_in_fragmentation.py  ube-oneshot_test.py
tests/chk/: h8.h5  octane.h5  octane_small.h5
tests/data/: P_mu_nu_ref.npy  gradient.txt  gradient_hf.txt  h2o_cc-pvqz_orca.json  hbn_sto3g_krhf.chk  lmo_coeff-be1_f_pm.npy  lmo_coeff-be1_nf_iao_so.npy  lmo_coeff-be2_f_iao_fb.npy  lmo_coeff-be2_nf_lo.npy  octane_different_order.xyz  octane_frag_3_orb_2.cube  oneshot_rbe_qmmm.chk  suspected_bug_octane.xyz
tests/xyz/: big_molecule.xyz  c3h4.xyz  distorted_octane.xyz  graphene.xyz  h8.xyz  hbn.xyz  shared_h_metaphosphate.xyz  short_polypropylene.xyz
v0.1.0-alpha/: .buildinfo  api_reference.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.1.0-alpha/.doctrees/: api_reference.doctree  index.doctree  install.doctree
v0.1.0-alpha/_autosummary/: quemb.kbe.autofrag.AutogenArgs.__init__.html  quemb.kbe.autofrag.AutogenArgs.html  quemb.kbe.autofrag.add_check_k.html  quemb.kbe.autofrag.autogen.html  quemb.kbe.autofrag.be_reduce.html  quemb.kbe.autofrag.html  quemb.kbe.autofrag.kfrag_func.html  quemb.kbe.autofrag.nearestof2coord.html  quemb.kbe.autofrag.sidefunc.html  quemb.kbe.autofrag.surround.html  quemb.kbe.autofrag.warn_large_fragment.html  quemb.kbe.fragment.FragPart.__init__.html  quemb.kbe.fragment.FragPart.all_centers_are_origins.html  quemb.kbe.fragment.FragPart.html  quemb.kbe.fragment.FragPart.to_Frags.html  quemb.kbe.fragment.fragmentate.html  quemb.kbe.fragment.html  quemb.kbe.helper.get_veff.html  quemb.kbe.helper.html  quemb.kbe.html  quemb.kbe.lo.KMF.__init__.html  quemb.kbe.lo.KMF.html  quemb.kbe.lo.Mixin_k_Localize.html  (+499 more)
(+2273 files in other folders)
