[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "pybind11"
]
build-backend = "setuptools.build_meta"

[project]
name = "quemb"
version = "0.1.0-alpha"
description = "QuEmb: A framework for efficient simulation of large molecules, surfaces, and solids via Bootstrap Embedding"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.7.0",
    "pyscf>=2.0.0",
    "networkx",
    "matplotlib",
    "attrs",
    "cattrs",
    "pyyaml",
    "numba",
    "ordered-set",
    "libdmet @ git+https://github.com/gkclab/libdmet_preview.git",
    "chemcoord @ git+https://github.com/mcocdawc/chemcoord.git"
]
[project.license]
text = "Apache-2.0"

[project.urls]
"Homepage" = "https://vanvoorhisgroup.mit.edu/quemb"
"Download" = "https://github.com/troyvvgroup/quemb"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
